CEC - Assignment - Mobile Card Gaps fixed

--- a/client/src/assets/styles/home.css
+++ b/client/src/assets/styles/home.css
@@ -86,7 +86,7 @@
 
 @media (max-width: 399px) {
   .card-single {
-    margin: 2px;
+    margin: 12px 0;
   }
 
   .title-section {
